# feedback

./: .gitignore  README.md  app.db  config.py.sample  gunicorn.config.py.sample  language.toml  pyproject.toml  toread.md  wsgi.py
feedbook/: __init__.py  errors.py  extensions.py  models.py  schemas.py  utils.py  wrappers.py
feedbook/assignments/: index.html
feedbook/blueprints/: admin.py  assignment.py  auth.py  course.py  home.py  standard.py  user.py
feedbook/static/: icons.py
feedbook/static/css/: main.css
feedbook/static/hs/: sortable._hs
feedbook/static/js/: main.js
feedbook/templates/: _layout.html
feedbook/templates/admin/: index.html
feedbook/templates/assignments/: assignment-list-item.html  assignment-list.html  (+4 more)
migrations/versions/: 0edf79c2855c_add_assignment_type_assignments.py  1b28118198ed_add_standard_type.py  23f55f0ef3ed_active_flag_on_standards.py  49080fd6e3e0_add_proficiency_associations.py  496aee67d671_add_active_bool_to_user.py  538fb3e93697_require_unique_email.py  691ac7fa28fa_assignment_title_on_attempt_record.py  8e178a916384_assignment_assignment_type.py  90447e905ba8_assignment_foreign_key_on_standard_.py  94a6fe99e293_course_assignments_association.py  b5bb7d12e37d_display_name_for_standards.py  b65a1d36f56e_align_standards_to_assignments.py  c309107ec8d2_remove_complete_bool_from_standard.py  c53ae6518533_created_on_property_for_courses.py  d4ff12af3701_.py  d70da2802924_add_created_date_to_assignments.py  f0e215237b75_remove_course_assignment_table.py
tests/: loader.py  test_admin.py  test_assignment.py  test_auth.py  test_course.py  test_home.py  test_loader.py  test_standard.py  test_user.py  test_wrappers.py  utils.py
tests/fixtures/: assignment_standards.json  assignment_types.json  assignments.json  course_assignments.json  course_enrollments.json  course_standards.json  courses.json  mult_tables_one_file.json  proficient_by_assessment.json  standard_assessments.json  standards.json  users.json  usertype.json
(+48 files in other folders)
