[project]
name = "grades"
version = "0.1.0"
description = "A standalone standards-based gradebook"
authors = [
  { name = "Brian Bennett", email= "brian.bennett2@gmail.com" }
]

dependencies = [
    "flask>=2.3.2",
    "flask-sqlalchemy>=3.0.5",
    "flask-login>=0.6.2",
    "python-dotenv>=1.0.0",
    "webargs>=8.3.0",
    "jinja_partials>=0.1.1",
    "htmx_flask>=0.1.0",
]
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
  "black>=23.7.0",
  "flask-migrate>=4.0.4"
]

[tool.hatch.metadata]
allow-direct-references = true
